# pokedex-builder

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build_pokedex.py  pyproject.toml  {lmd
.github/workflows/: ci.yml
data/: form_overrides.yaml  form_rules.yaml  game_availability.yaml  gender_differences.yaml  shiny_availability.yaml
docs/batches/: BATCH-001-lets-go.md  BATCH-002-legends-arceus.md  BATCH-003-xy.md  BATCH-004-oras.md  BATCH-005-sun-moon.md  BATCH-006-ultra-sun-ultra-moon.md  BATCH-007-sword-shield.md  BATCH-008-bdsp.md  BATCH-009-scarlet-violet.md  BATCH-010-legends-za.md  BATCH-011-special-acquisition-methods.md  BATCH-012-shiny-kanto.md  BATCH-013-shiny-johto.md  BATCH-014-shiny-hoenn.md  BATCH-015-shiny-sinnoh.md  BATCH-016-shiny-unova.md  BATCH-017-shiny-kalos.md  BATCH-018-shiny-alola.md  BATCH-019-shiny-galar-hisui.md  BATCH-020-shiny-paldea-kitakami-blueberry.md  BATCH-021-shiny-catalog-completion-and-final-audit.md  BATCH-022-home-form-corrections-and-excel-names.md  BATCH-023-excel-form-labels-and-flower-order.md  (+7 more)
pokedex/: cache.py  catalog_coverage.py  config.py  constants.py  entries.py  exceptions.py  exporter_csv.py  exporter_excel.py  exporter_json.py  form_overrides.py  form_rules.py  forms.py  game_availability.py  gender_differences.py  http.py  logger.py  models.py  pokeapi.py  shiny_availability.py  species.py  variants.py  varieties.py
tests/: test_build_pokedex.py  test_cache.py  test_catalog_coverage.py  test_config.py  test_entries.py  test_exporters.py  test_form_overrides.py  test_form_rules.py  test_forms.py  test_game_availability.py  test_gender_differences.py  test_http.py  test_logger.py  test_models.py  test_pokeapi.py  test_pokeapi_species.py  test_shiny_availability.py  test_smoke.py  test_species.py  test_variants.py  test_varieties.py
