[project]
name = "pokedex-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "types-openpyxl>=3.1.5.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260712",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.idea
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | cache
  | output
)/
'''

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = [
    "^cache/",
    "^output/",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pokedex"]
include = ["build_pokedex.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[project.scripts]
pokedex-builder = "build_pokedex:main"

